--- a/public/templates/views/about.hbs
+++ b/public/templates/views/about.hbs
@@ -11,6 +11,7 @@
 <body>
     <div class="main-content">
     {{>header}}
+    <p>This site was created by Jeremy Hostetter.  It uses data from a site that is not from Udemy</p>
     <img class="portrait" src="/img/me.jpg">
     <p>This is {{name}}</p>
     </div>
